establish main sections

--- a/css/index.css
+++ b/css/index.css
@@ -23,5 +23,20 @@ body {
   justify-content: center;
   align-items: center;
 }
+.root .menu {
+  width: 400px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  outline: 2px solid black;
+  background-color: #dfe1f8;
+}
+.root .chat {
+  width: 600px;
+  height: 100%;
+}
 
 /*# sourceMappingURL=index.css.map */
