--- a/css/input.scss
+++ b/css/input.scss
@@ -38,4 +38,22 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    .menu {
+        width: calc($window-width * 0.4);
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex-shrink: 0;
+        outline: 2px solid black;
+        background-color: $main-tints;
+
+    }
+    
+    .chat {
+        width: calc($window-width * 0.6);
+        height: 100%;
+    }
 }
