--- a/css/input.scss
+++ b/css/input.scss
@@ -50,6 +50,31 @@ body {
         outline: 2px solid black;
         background-color: $main-tints;
 
+        .menu-header {
+            height: 60px;
+            width: calc(100% - 20px);
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: $default-gap;
+
+            h1 {
+                font-size: $name-size;
+                font-weight: 900;
+            }
+        }
+
+        .menu-items {
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            overflow-y: auto;
+
+        }
     }
     
     .chat {
