--- a/css/index.css
+++ b/css/index.css
@@ -56,6 +56,57 @@ body {
   align-items: center;
   overflow-y: auto;
 }
+.root .menu .menu-items .menu-item {
+  height: 60px;
+  width: calc(100% - 20px);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+  gap: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+.root .menu .menu-items .menu-item .user-avatar {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(94, 199, 234);
+  border-radius: 50%;
+  flex-shrink: 0;
+}
+.root .menu .menu-items .menu-item .menu-item-data {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 100%;
+  width: 100%;
+}
+.root .menu .menu-items .menu-item .menu-item-data h2 {
+  font-size: 16pt;
+  font-weight: 600;
+  margin: 0 0 0 0;
+}
+.root .menu .menu-items .menu-item .menu-item-data p {
+  font-size: 14pt;
+  margin: 0 0 0 0;
+  color: #8c8fa0;
+}
+.root .menu .menu-items .menu-item .menu-item-notification {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  visibility: hidden;
+  flex-shrink: 0;
+}
+.root .menu .menu-items .menu-item .menu-item-notification.active {
+  visibility: visible;
+  background-color: #0099ff;
+}
+.root .menu .menu-items .menu-item.selected {
+  background-color: #d2d3e8;
+}
 .root .chat {
   width: 600px;
   height: 100%;
