--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 }
 body {
   font-family: "Roboto", sans-serif;
+  font-size: 14pt;
   background-color: white;
   color: #000000;
   height: 100vh;
@@ -12,6 +13,10 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+body h2 {
+  font-size: 16pt;
+  font-weight: 600;
 }
 
 .root {
@@ -84,8 +89,6 @@ body {
   width: 100%;
 }
 .root .menu .menu-items .menu-item .menu-item-data h2 {
-  font-size: 16pt;
-  font-weight: 600;
   margin: 0 0 0 0;
 }
 .root .menu .menu-items .menu-item .menu-item-data p {
