--- a/css/input.scss
+++ b/css/input.scss
@@ -92,14 +92,6 @@ body {
                 padding: $default-gap;
                 cursor: pointer;
 
-                .user-avatar {
-                    width: 50px;
-                    height: 50px;
-                    background-color: rgb(94, 199, 234);
-                    border-radius: 50%;
-                    flex-shrink: 0;
-                }
-
                 .menu-item-data {
                     display: flex;
                     flex-direction: column;
@@ -161,5 +153,31 @@ body {
             align-items: center;
             content: "No chat selected";
         }
+
+        .chat-header {
+            height: 60px;
+            width: calc(100% - 20px);
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            gap: $default-gap;
+            align-items: center;
+            padding: $default-gap;
+    
+            h1 {
+                font-size: $name-size;
+                font-weight: 900;
+            }
+
+            outline: 2px solid black;
+        }
+    }
+
+    .user-avatar {
+        width: 50px;
+        height: 50px;
+        background-color: rgb(94, 199, 234);
+        border-radius: 50%;
+        flex-shrink: 0;
     }
 }
