--- a/css/input.scss
+++ b/css/input.scss
@@ -36,6 +36,10 @@ body {
     }
 }
 
+p {
+    margin: 0 0 0 0;
+}
+
 .root {
     height: 800px;
     width: 1000px;
@@ -53,7 +57,6 @@ body {
         justify-content: center;
         align-items: center;
         flex-shrink: 0;
-        outline: 2px solid black;
         background-color: $main-tints;
 
         .menu-header {
@@ -140,6 +143,7 @@ body {
         height: 100%;
 
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         flex-shrink: 0;
@@ -168,8 +172,89 @@ body {
                 font-size: $name-size;
                 font-weight: 900;
             }
+        }
 
-            outline: 2px solid black;
+        .chat-messages {
+            background-color: $light-shades;
+            height: 640px;
+            width: 100%;
+            display: flex;
+            flex-shrink: 0;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            overflow-y: auto;
+
+            .message {
+                flex-shrink: 0;
+                width: calc(100% - $default-gap * 2);
+                min-height: 60px;
+                padding: $default-gap;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-end;
+                gap: $default-gap;
+
+                .message-data {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: flex-start;
+                    max-width: 70%;
+                    min-width: 10%;
+                    padding: $default-gap;
+                    border-radius: 20px;
+                    background-color: $main-color;
+                    color: $light-shades;
+
+                    .message-data-time {
+                        width: 100%;
+                        font-size: $text-size - 4px;
+                        text-align: end;
+                    }
+                }
+            }
+
+            .message.opponent {
+                align-items: flex-start;
+
+                .message-data {
+                    background-color: $light-tints;
+                    color: $dark-shades;
+
+                    .message-data-time {
+                        color: $dark-tints;
+                    }
+                }
+            }
+        }
+
+        .chat-send {
+            height: 60px;
+            padding: $default-gap;
+            width: calc(100% - 20px);
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: $default-gap;
+
+            .chat-send-input {
+                width: 80%;
+                height: 100%;
+                resize: none;
+                font-size: $text-size;
+            }
+
+            .chat-send-button {
+                width: 20%;
+                height: 100%;
+                background-color: $main-color;
+                color: $light-shades;
+                border: none;
+                border-radius: 10px;
+            }
         }
     }
 
